--- a/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -13,13 +13,14 @@
                 <author role="translatorEng" xml:id="UT22084-093-020-9">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-093-020-18">Torsten Gerloff</editor>
                 <editor role="copyEditor" xml:id="UT22084-093-020-27">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-093-020-37">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.14 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-093-020"/>
                 <date/>
             </publicationStmt>
@@ -112,6 +113,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-14T13:30:03.888Z" type="text-version" status="0.0.14" xml:id="UT22084-093-020-32">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T09:29:19.429Z" type="text-version" status="0.0.15" xml:id="UT22084-093-020-38">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-31T15:54:29.406Z" type="translation-status" status="2.b" xml:id="UT22084-093-020-39">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-31T15:54:29.406Z" type="text-version" status="0.0.16" xml:id="UT22084-093-020-40">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
