--- a/translations/kangyur/placeholders/101-042_toh987-the_tantra_of_the_play_of_the_goddess_usnisavijaya.xml
+++ b/translations/kangyur/placeholders/101-042_toh987-the_tantra_of_the_play_of_the_goddess_usnisavijaya.xml
@@ -13,14 +13,15 @@
                 <author role="translatorEng" xml:id="UT22084-101-042-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-101-042-14">Ryan Damron</editor>
                 <editor role="copyEditor" xml:id="UT22084-101-042-24">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-101-042-32">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-101-042"/>
                 <date/>
             </publicationStmt>
@@ -89,6 +90,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-14T13:38:11.533Z" type="text-version" status="0.0.12" xml:id="UT22084-101-042-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-24T09:29:48.963Z" type="text-version" status="0.0.13" xml:id="UT22084-101-042-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-31T16:02:24.128Z" type="translation-status" status="2.b" xml:id="UT22084-101-042-34">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-31T16:02:24.128Z" type="text-version" status="0.0.14" xml:id="UT22084-101-042-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
