--- a/translations/kangyur/translations/001-003_toh1-3-chapter_3_on_lifting_restrictions.xml
+++ b/translations/kangyur/translations/001-003_toh1-3-chapter_3_on_lifting_restrictions.xml
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-001-003-634">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.7 <date>2024</date>
+                <edition>v 1.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -168,6 +168,9 @@
                 </change>
                 <change who="#andre" when="2024-11-01T00:20:13.979Z" type="text-version" status="1.0.7" xml:id="UT22084-001-003-4661">
                     <desc>Glossary integration revised, activated in CG</desc>
+                </change>
+                <change who="#celso" when="2024-11-01T11:00:52.026Z" type="text-version" status="1.0.8" xml:id="UT22084-001-003-4662">
+                    <desc>Removed stray milestone</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -702,7 +705,6 @@
                 </tei:div>
                 <tei:div type="section" xml:id="UT22084-001-003-section-1">
                     <!-- MAIN SECTION-->
-                    <milestone unit="chunk" xml:id="UT22084-001-003-131"/>
                     <head type="section" tid="47">Lifting Restrictions</head>
                     <milestone unit="chunk" xml:id="UT22084-001-003-132"/>
                     <p tid="48">A summary:</p>
@@ -1014,7 +1016,6 @@
                             improper lifting of restrictions. If these five factors pertain to someone not already 
                             appointed to direct the lifting of restrictions, he should be appointed, and if already appointed should not be relieved of that
                             position.</p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-172"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-173"/>
                         <p tid="68">“He should be appointed in the following way: After setting out
@@ -1069,7 +1070,6 @@
                                 1998, who provides relevant Sanskrit parallels drawn from other
                                 texts. For complete textual concordances, see Clarke 2014.</note>
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-185"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-186"/>
                         <p tid="79">“I will formulate the rules of customary conduct for the monk
@@ -1097,7 +1097,6 @@
                                     ba ’dzin pa dag gi man ngang las shes par
                                 bya’o</foreign>.</note>
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-189"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-190"/>
                         <p tid="81">“After that, the saṅgha elder should perform an act by motion
@@ -1114,7 +1113,6 @@
                         </q>
                         <milestone unit="chunk" xml:id="UT22084-001-003-193"/>
                         <p tid="83">“That is the motion.</p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-194"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-195"/>
                         <p tid="85">“Then, the monk who directs the lifting of restrictions should
@@ -1393,7 +1391,6 @@
                         <p tid="111">“They will be guilty of a breach if the monk receiving the
                             lifting of restrictions follows the customary rules of conduct but his
                             profession is not accepted after being properly received.”</p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-236"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-237"/>
                         <p tid="113">The venerable Upāli asked the Blessed Buddha, “Honorable One,
@@ -1430,7 +1427,6 @@
                                     <ptr target="#UT22084-001-002-612"/>–<ptr target="#UT22084-001-002-627"/> and 
                                     <ptr target="#UT22084-001-002-659"/>–<ptr target="#UT22084-001-002-670"/>.</note>
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-245"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-246"/>
                         <p tid="121">The venerable Upāli asked the Blessed Buddha, “Honorable One,
@@ -1576,7 +1572,6 @@
                             finished is an improper suspension of the lifting of restrictions. These
                             are the five proper suspensions and the one improper suspension of the
                             lifting of restrictions.</p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-268"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-269"/>
                         <p tid="140">“There are liftings of restrictions with a single repetition.
@@ -1753,7 +1748,6 @@
                             reason for the lifting of restrictions recited
                             once.<!--</modularPassage>-->
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-291"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-292"/>
                         <p tid="158">“Another reason for the lifting of restrictions recited once:
@@ -1776,7 +1770,6 @@
                             reason for the lifting of restrictions recited once.
                             <!--</modularPassage>-->
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-295"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-296"/>
                         <p tid="161">“Another reason for the lifting of restrictions recited once:
@@ -1875,7 +1868,6 @@
                             reason for the lifting of restrictions recited
                             once.<!--</modularPassage>-->
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-305"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-306"/>
                         <p tid="168">“Another reason for the lifting of restrictions recited once:
@@ -1905,7 +1897,6 @@
                             reason for the lifting of restrictions recited
                             once.<!--</modularPassage>-->
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-311"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-312"/>
                         <p tid="172">“Another reason for the lifting of restrictions recited once:
@@ -1938,7 +1929,6 @@
                             reason for the lifting of restrictions recited once.
                             <!--</modularPassage>-->
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-315"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-316"/>
                         <p tid="176">“Another reason for the lifting of restrictions recited once:
@@ -1974,7 +1964,6 @@
                             the reason for the lifting of restrictions recited once.
                             <!--</modularPassage>-->
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-321"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-322"/>
                         <p tid="180">“Another reason for the lifting of restrictions recited once: A
@@ -2008,7 +1997,6 @@
                             reason for the lifting of restrictions recited once. <!--</modularPassage>-->
                             <ref cRef="F.231.b" type="folio" xml:id="UT22084-001-003-578"/>
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-326"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-327"/>
                         <p tid="184">“Another reason for the lifting of restrictions recited once: A
@@ -2038,7 +2026,6 @@
                             reason for the lifting of restrictions recited once.
                             <!--</modularPassage>-->
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-330"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-331"/>
                         <p tid="188">“Another reason for the lifting of restrictions recited once: A
@@ -2063,7 +2050,6 @@
                             reason for the lifting of restrictions recited once. <!--</modularPassage>-->
                             <ref cRef="B16" type="bampo"/>
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-334"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-335"/>
                         <p tid="192">“Another reason for the lifting of restrictions recited once: A
@@ -2090,7 +2076,6 @@
                             reason for the lifting of restrictions recited
                             once.<!--</modularPassage>-->
                         </p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-338"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-339"/>
                         <p tid="196">“For what reason is the lifting of restrictions repeated twice?
@@ -2243,7 +2228,6 @@
                                                   </foreign><foreign xml:lang="Bo-Ltn" type="quote">’</foreign><foreign xml:lang="Bo-Ltn" type="term">ba’ zhig pa</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">śuddha-prayāścittaka</foreign>). </note>-->
                             a confessable offense, or a misdeed, he should disclose it and then
                             restrictions should be lifted.</p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-372"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-373"/>
                         <p tid="220">“On the fifteenth, the day of lifting restrictions, after some
@@ -2274,7 +2258,6 @@
                             and then restrictions should be lifted. Those who believe it to be
                             atonable should make him make a resolution about it and then
                             restrictions should be lifted.</p>
-                        <milestone unit="chunk" xml:id="UT22084-001-003-375"/>
                         <lb/>
                         <milestone unit="chunk" xml:id="UT22084-001-003-376"/>
                         <p tid="222">“On the fifteenth, the day of lifting restrictions, after some
@@ -4054,15 +4037,16 @@
                             <term xml:lang="bo" n="1">ཁ་རོག</term>
                         </gloss>
                     </item>
-                    <item>
+                    <!--<item>
                         <gloss xml:id="UT22084-001-003-544" type="term" mode="match">
                             <term type="translationMain">suppress</term>
                             <term type="translationAlternative">suppressed</term>
+                            <term type="translationAlternative">suppressing</term>
                             <term xml:lang="Sa-Ltn" status="verified" type="attestedSource">pramardya</term>
                             <term xml:lang="Bo-Ltn" status="verified" type="attestedSource" n="1">rab tu bsgo ba</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རབ་ཏུ་བསྒོ་བ།</term>
                         </gloss>
-                    </item>
+                    </item>-->
                     <item>
                         <gloss type="term" xml:id="UT22084-001-003-545">
                             <term type="translationMain">monk who directs the lifting of
@@ -4098,16 +4082,16 @@
                             <term xml:lang="Sa-Ltn" type="attestedSource" status="verified">gocaramārga</term>
                         </gloss>
                     </item>
-                    <item>
+                    <!--<item>
                         <gloss xml:id="UT22084-001-003-549" type="term" mode="match">
                             <term type="translationMain">should welcome with friendly words</term>
                             <term type="translationAlternative">welcome with friendly words</term>
-                            <term xml:lang="Sa-Ltn" status="verified" type="attestedSource">sākhilyakena pratyudgamya</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bshes pa'i tshig gis
-                                bsu bya</term>
+                            <term type="translationAlternative">welcomed</term>
+                            <term xml:lang="Sa-Ltn" type="attestedSource" status="verified">sākhilyakena pratyudgamya</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bshes pa'i tshig gis bsu bya</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བཤེས་པའི་ཚིག་གིས་བསུ་བྱ།</term>
                         </gloss>
-                    </item>
+                    </item>-->
                     <item>
                         <gloss xml:id="UT22084-001-003-551" type="person" mode="match">
                             <term type="translationMain">Upāli</term>
