--- a/translations/kangyur/translations/093-017_toh702-the_simhanada_tantra.xml
+++ b/translations/kangyur/translations/093-017_toh702-the_simhanada_tantra.xml
@@ -20,7 +20,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-093-017-148">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -150,6 +150,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-23T23:42:27.846Z" type="text-version" status="1.0.0" xml:id="UT22084-093-017-151">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#andre" when="2024-11-02T00:58:10.465Z" type="text-version" status="1.0.1" xml:id="UT22084-093-017-152">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -513,7 +516,7 @@
                         Willis, 8–28. London: The British Museum, 2021.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-093-017-glossary">
+            <div type="glossary" xml:id="UT22084-093-017-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-093-017-108">
