--- a/translations/kangyur/translations/093-018_toh703-the_dharani_of_avalokitesvara_simhanada.xml
+++ b/translations/kangyur/translations/093-018_toh703-the_dharani_of_avalokitesvara_simhanada.xml
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-093-018-297">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -155,6 +155,9 @@
                 <change who="#martina-cotter" when="2024-10-23T23:50:08.771Z" type="text-version" status="1.0.0" xml:id="UT22084-093-018-301">
                     <desc>First published version.</desc>
                 </change>
+                <change who="#andre" when="2024-11-02T01:33:01.029Z" type="text-version" status="1.0.1" xml:id="UT22084-093-018-302">
+                    <desc>Glossary integration revised, activated in CG</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -163,7 +166,7 @@
                     Outline to the text is quite complex, it is recommended that you paste the outlined contents from the DOCX here as a comment for
                     markup's reference. The actual table of contents will be generated in the Reading Room by the parser.-->
         <front>
-            <div type="summary" xml:id="UT22084-093-018-summary">
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="summary" xml:id="UT22084-093-018-summary">
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-093-018-45"/>
                 <p tid="2">
@@ -171,8 +174,8 @@
                     story of how Avalokiteśvara Siṃhanāda tamed the nāgas and gained curative powers. The text
                     teaches his dhāraṇī, along with several others, and gives ritual instructions for how to
                     use these for healing and protection.</p>
-            </div>
-            <div type="acknowledgment" xml:id="UT22084-093-018-acknowledgment">
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="acknowledgment" xml:id="UT22084-093-018-acknowledgment">
                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                 <milestone unit="chunk" xml:id="UT22084-093-018-46"/>
                 <p tid="4">This publication was completed under the patronage and supervision of 84000:
@@ -182,10 +185,10 @@
                     Catherine Dalton produced the translation and wrote the introduction. Ryan Damron edited
                     the translation and the introduction, and Dawn Collins copyedited the text. Martina Cotter
                     was in charge of the digital publication process.</p>
-            </div>
-            <div type="introduction" xml:id="UT22084-093-018-introduction">
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="introduction" xml:id="UT22084-093-018-introduction">
                 <head type="introduction" tid="7">Introduction</head>
-                <div type="section" xml:id="UT22084-093-018-introduction-1">
+                <tei:div type="section" xml:id="UT22084-093-018-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-093-018-49"/>
                     <p tid="9">
                         <title xml:lang="en">The Dhāraṇī of Avalokiteśvara Siṃhanāda</title> recounts
@@ -325,14 +328,14 @@
                         only minor variants. We edited the dhāraṇī itself very slightly on the basis of the
                         Sanskrit text from the <title xml:lang="Sa-Ltn">Sādhanamālā</title> and have noted all
                         instances where this varies from the dhāraṇī as presented in the Degé recension. </p>
-                </div>
-            </div>
+                </tei:div>
+            </tei:div>
         </front>
         <body>
-            <div type="translation" xml:id="UT22084-093-018-translation">
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="translation" xml:id="UT22084-093-018-translation">
                 <head type="translation">The Translation</head>
                 <head type="titleMain" tid="16">The Dhāraṇī of Noble Avalokiteśvara Siṃhanāda</head>
-                <div type="section" xml:id="UT22084-093-018-section-1">
+                <tei:div type="section" xml:id="UT22084-093-018-section-1">
                     <milestone unit="chunk" xml:id="UT22084-093-018-67"/>
                     <p tid="20">
                         <ref cRef="F.165.b" type="folio" xml:id="UT22084-093-018-266"/> Homage to
@@ -1037,23 +1040,23 @@
                     <milestone unit="chunk" xml:id="UT22084-093-018-174"/>
                     <trailer tid="104">This completes “<title xml:lang="en">The Dhāraṇī of Noble
                             Avalokiteśvara Siṃhanāda</title>.”</trailer>
-                </div>
-                <div type="colophon" xml:id="UT22084-093-018-colophon">
+                </tei:div>
+                <tei:div type="colophon" xml:id="UT22084-093-018-colophon">
                     <head type="colophon" tid="105">Colophon</head>
                     <milestone unit="chunk" xml:id="UT22084-093-018-175"/>
                     <p tid="106">It was translated, edited, and finalized at the self-arisen caitya at the
                         Drika charnel ground in Kashmir by the Noble Lady Vajrasattvī, who had attained
                         accomplishment, and the translator Gar Sherab Jungne.</p>
-                </div>
-            </div>
+                </tei:div>
+            </tei:div>
         </body>
         <back>
-            <div type="notes" xml:id="UT22084-093-018-notes">
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="notes" xml:id="UT22084-093-018-notes">
                 <head type="notes" tid="107">Notes</head>
-            </div>
-            <div type="listBibl" xml:id="UT22084-093-018-listBibl">
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="listBibl" xml:id="UT22084-093-018-listBibl">
                 <head type="listBibl" tid="109">Bibliography</head>
-                <div type="section" xml:id="UT22084-093-018-listBibl-1">
+                <tei:div type="section" xml:id="UT22084-093-018-listBibl-1">
                     <head type="section" tid="112">Primary Sources</head>
                     <bibl xml:id="UT22084-093-018-176">
                         <title xml:lang="Bo-Ltn">’phags pa spyan ras gzigs
@@ -1104,8 +1107,8 @@
                             (<title xml:lang="Bo-Ltn">gsung ’bum/ mi pham rgya mtsho</title>), Chengdu: gangs
                         can rig gzhung dpe rnying myur skyobs lhan tshogs, 2007, vol. 25 (ra), folios
                         51.a–51.b.</bibl>
-                </div>
-                <div type="section" xml:id="UT22084-093-018-listBibl-2">
+                </tei:div>
+                <tei:div type="section" xml:id="UT22084-093-018-listBibl-2">
                     <head type="section" tid="111">Secondary Sources</head>
                     <bibl xml:id="UT22084-093-017-138">84000. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh704.html">The Dhāraṇī of
@@ -1141,9 +1144,9 @@
                     <bibl xml:id="UT22084-093-018-191">Tidwell, Tawni L., Nianggajia, and Heidi E. Fjeld.
                         “Chasing <distinct>dön</distinct> spirits in Tibetan medical encounters: Transcultural
                         affordances and embodied psychiatry in Amdo, Qinghai.” In <title xml:lang="en">Transcultural Psychiatry</title>. Forthcoming.</bibl>
-                </div>
-            </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-093-018-glossary">
+                </tei:div>
+            </tei:div>
+            <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary" xml:id="UT22084-093-018-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-093-018-193">
@@ -1849,19 +1852,15 @@
                             </note>
                         </gloss>
                     </item>
-                    <item>
-                        <gloss type="person" xml:id="UT22084-093-018-260">
+                    <!--<item><gloss type="person" xml:id="UT22084-093-018-260">
                             <term type="translationMain">Jamgön Kongtrul Lodrö Thayé</term>
                             <term status="verified" xml:lang="Bo-Ltn" n="1">’jam dgon kong sprul blo gros
                                 mtha’ yas </term>
                             <term xml:lang="bo" n="1">འཇམ་དགོན་ཀོང་སྤྲུལ་བློ་གྲོས་མཐའ་ཡས།</term>
-                            <note type="definition">
-                                <p>1813–1899. A well-known and prolific Tibetan master who
+                            <note type="definition"><p>1813–1899. A well-known and prolific Tibetan master who
                                     promoted a non-sectarian (<foreign xml:lang="Bo-Ltn" type="term">ris
-                                        med</foreign>) approach to Buddhist study and practice. </p>
-                            </note>
-                        </gloss>
-                    </item>
+                                        med</foreign>) approach to Buddhist study and practice. </p></note>
+                        </gloss></item>-->
                     <item>
                         <gloss type="person" xml:id="UT22084-093-018-261">
                             <term type="translationMain">Mipham Gyatso</term>
@@ -1970,7 +1969,7 @@
                     </gloss>
                     </item> 
                 </list>
-            </div>
+            </tei:div>
         </back>
     </text>
 </TEI>
