--- a/translations/kangyur/translations/093-019_toh704,912-the_dharani_of_simhanada.xml
+++ b/translations/kangyur/translations/093-019_toh704,912-the_dharani_of_simhanada.xml
@@ -20,7 +20,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-093-019-41">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -160,6 +160,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-23T23:54:31.406Z" type="text-version" status="1.0.0" xml:id="UT22084-093-019-125">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#andre" when="2024-11-02T01:38:08.797Z" type="text-version" status="1.0.1" xml:id="UT22084-093-019-126">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -535,17 +538,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-093-019-98">
-                            <term type="translationMain">Five deeds of immediate retribution. </term>
-                            <term status="verified" xml:lang="Bo-Ltn" n="1">mtshams med pa lnga </term>
-                            <term xml:lang="bo" n="1">མཚམས་མེད་པ་ལྔ།</term>
-                            <term xml:lang="Sa-Ltn" status="verified" type="attestedDictionary">pañcānantarya</term>
+                        <gloss xml:id="UT22084-093-019-98" type="term" mode="match">
+                            <term type="translationMain">five deeds of immediate retribution</term>
+                            <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">pañcānantarya</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mtshams med pa lnga</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">མཚམས་མེད་པ་ལྔ།</term>
                             <note type="definition">
-                                <p>Five acts said to lead to immediate and
-                                    unavoidable birth in the hell realms: killing one’s father,
-                                    killing one’s mother, killing an arhat, sowing discord within
-                                    the saṅgha, and drawing the blood of a tathāgata with ill
-                                    intent. </p>
+                                <p>Five acts said to lead to immediate and unavoidable birth in the hell realms: killing one’s father, killing one’s mother, killing an arhat, sowing discord within the saṅgha, and drawing the blood of a tathāgata with ill intent. </p>
                             </note>
                         </gloss>
                     </item>
